minikube/0906/lion-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lion-app
  labels:
    app: lion-app
spec:
  imagePullSecrets:
    - name: regcred
  containers:
    - name: lion-app
      image: browneyed.kr.ncr.ntruss.com/lion-app:sqlite
      imagePullPolicy: Always
      ports:
        - containerPort: 8000
