minikube/0906/lion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lion
spec:
  rules:
  - host: lion.example.com
    http:
      paths:
      - path: /health/
        pathType: Prefix
        backend:
          service:
            name: lion-nodeport
            port:
              number: 80
